--- a/app.json
+++ b/app.json
@@ -1,19 +1,19 @@
 {
-  "name": "SL-DTSVR-VC",
+  "name": "bandwidth-hero-proxy",
   "description":
-    "Data compression service that converts images to the lower quality and save data using Sharp",
-  "repository": "https://github.com/SSL-ACTX/SL-DTSVR-VC",
-  "website": "...",
-  "logo": "...",
+    "Data compression service that converts images to low-res WebP or JPEG on the fly. Used in Bandwidth-Hero browser extension.",
+  "repository": "https://github.com/ayastreb/bandwidth-hero-proxy",
+  "website": "https://bandwidth-hero.com",
+  "logo": "https://bandwidth-hero.com/favicon-96x96.png",
   "keywords": ["proxy", "compression", "data saving", "compress image", "webp"],
   "env": {
     "LOGIN": {
-      "description": "root",
-      "required": true
+      "description": "If you want to password-protect your service, set your login here.",
+      "required": false
     },
     "PASSWORD": {
-      "description": "root",
-      "required": true
+      "description": "If you want to password-protect your service, set your password here.",
+      "required": false
     }
   }
 }
