--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sl-image-compression-proxy",
+  "name": "bandwidth-hero-proxy",
   "main": "server.js",
   "private": true,
-  "version": "1.1.2",
-  "description": "Data compression service that converts images to low-res WebP or JPEG using sharp.",
-  "author": "SSL-ACTX",
+  "version": "1.0.1",
+  "description": "Data compression service that converts images to low-res WebP or JPEG on the fly. Used in Bandwidth-Hero browser extension.",
+  "author": "Anatoliy Yastreb",
   "license": "MIT",
   "scripts": {
     "start": "node server.js"
@@ -13,8 +13,8 @@
     "basic-auth": "^2.0.1",
     "express": "4.17.1",
     "lodash": "^4.17.21",
-    "request": "^2.88.2",
-    "sharp": "^0.30.5"
+    "request": "^2.83.0",
+    "sharp": "^0.28.2"
   },
   "engines": {
     "node": "14.x"
