--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
    "version": 2,
-   "name": "SL-DTSVR-VC",
+   "name": "bandwidth-hero-proxy2",
    "builds": [
       { "src": "server.js", "use": "@vercel/node" }
    ],
