--- a/app.json
+++ b/app.json
@@ -8,12 +8,12 @@
   "keywords": ["proxy", "compression", "data saving", "compress image", "webp"],
   "env": {
     "LOGIN": {
-      "description": "root",
-      "required": true
+      "description": "If you want to password-protect your service, set your login here.",
+      "required": false
     },
     "PASSWORD": {
-      "description": "root",
-      "required": true
+      "description": "If you want to password-protect your service, set your password here.",
+      "required": false
     }
   }
 }
